Replaces `app/` references with `src/`

--- a/docs/js/i18n.md
+++ b/docs/js/i18n.md
@@ -86,7 +86,7 @@ You can extract all i18n language within each component by running the following
   npm run extract-intl
 ```
 
-This will extract all language into i18n JSON files in `app/translations`.
+This will extract all language into i18n JSON files in `src/translations`.
 
 ## Adding A Language
 
@@ -100,7 +100,7 @@ Then enter the two character i18n standard language specifier (e.g. "fr", "de", 
 
 ## Removing i18n and react-intl
 
-You can remove `react-intl` modules by first removing the `LanguageProvider` object from the `app/app.js` file and by either removing or not selecting the i18n text option during component scaffolding.
+You can remove `react-intl` modules by first removing the `LanguageProvider` object from the `src/app.js` file and by either removing or not selecting the i18n text option during component scaffolding.
 
 The packages associated with `react-intl` are:
 
